# lab8

./: .travis.yml  CMakeLists.txt  README.md  lab8.pro  main.cpp  places.cpp  places.h  tcp_client.cpp  tcp_client.h
include/: places.h  tcp_client.h  tcp_server.h
lab8/: lab8.pro  tcp_server.cpp  tcp_server.h
src/: places.cpp  tcp_client.cpp  tcp_server.cpp
